--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -7,5 +7,5 @@ RUN npm install
 COPY . .
 EXPOSE 8001
 
-FROM keymetrics/pm2:latest-alpine
-RUN ["pm2-runtime", "start", "index.js"]
+RUN npm install pm2 -g
+CMD ["pm2-runtime", "index.js"]
