--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "13.10"
+      - name: Delete gitignore
+        run: |
+          rm .gitignore
       - name: Create .env file
         run: |
           touch .env
