--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,10 @@ jobs:
       - name: Create .env file
         run: |
           touch .env
-          echo PORT=${{ secrets.PORT }} >> .env
+          echo PORT_APP=${{ secrets.PORT_APP }} >> .env
       - name: Push .env to directory
         run: |
-          git config user.email "${{ secrets.PORT }}"
+          git config user.email "${{ secrets.EMAIL }}"
           git config user.name "${{ secrets.G_USERNAME }}"
           git add .
           git commit -m "environment variables"
