Fixed formatting error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,11 @@ jobs:
           git add .
           git commit -m "environment variables"
       - name: fetch from master
-          run: git fetch origin master
+        run: |
+          git fetch origin master
       - name: push code to master
-          run: git push origin HEAD:master
+        run: |
+          git push origin HEAD:master
       - name: Install npm
         run: |
           npm install
