--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -5,7 +5,7 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
-EXPOSE {{ secrets.PORT_APP }}
+EXPOSE 80
 
 RUN npm install pm2 -g
 CMD ["pm2-runtime", "index.js"]
